2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: Include <config.h> so we can check for PLATFORM_WIN32.

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: Fix Win32 build break.  Win32 doesn't have all the sys/* headers.

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* serial.c: HPUX compiler fix.
	* stdlib.c: Add C-defined macro wrappers.

2005-01-04  Jonathan Pryor  <jonpryor@vt.edu>

	* stdio.c: Add wrapper for C99's snprintf(3).

2005-01-04  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Rewrite.  Remove configure-generated warnings about 
	  multiple _LIBADD and _SOURCES lines.  Add support for Win32.  
	  Win32 support is limited to ANSI C functions.
	* stdio.c: Don't compile Unix wrappers on Win32.

2005-01-04  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (LIBS): Remove.  Was overriding results of configure check.
	(libMonoPosixHelper_la_LIBADD): List $(GLIB_LIBS) here.

2005-01-04  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Add libnsl to LIBS.  Hopefully this will let sparc link.
	* mph.h: Make MPH_INTERNAL conditional on __GNUC__.

2005-01-03  Jonathan Pryor  <jonpryor@vt.edu>

	* signal.c, stdio.c: Remove "function declaration isn't a prototype" warnings.
	* unistd.c: Check for presence of gethostname and sethostname.

2005-01-03  Jonathan Pryor  <jonpryor@vt.edu>

	* mph.h, x-struct-str.c: Add "const" to parameters to remove 
	  "warning: passing arg [2|4]...discards qualifiers" message.

2005-01-03  Jonathan Pryor  <jonpryor@vt.edu>

	* fstab.c: Remove some sparc compiler warnings.

2005-01-03  Jonathan Pryor  <jonpryor@vt.edu>

	* fstab.c: Solaris doesn't support getfsent(3), but it provides equivalent
	  functionality in getvfsent(3C).  Implement Solaris support.

2005-01-02  Jonathan Pryor  <jonpryor@vt.edu>

	* stdio.c: More wrapper functions.  I missed a few macros...  This should
	  complete all macro's defined in <stdio.h> for C99.

2004-12-30  Jonathan Pryor  <jonpryor@vt.edu>
